src/components/Hero/_Hero.scss
@import "../../scss/index";

.hero {
  width: 100%;
  height: 100vh;
  background: url(../../assets/img/hero-bg.jpg) top center fixed;
  background-size: cover;

  &__logo {
    font-family: $logo-font;
    color: $color-secondary;
    font-weight: bolder;
    font-size: 4em;
    margin-bottom: -0.7rem;

    span {
      color: $color-primary;
    }
  }

  &__slogan {
    display: flex;
    flex-direction: row;
    justify-content: center;
    color: rgb(199, 197, 197);
    font-family: $welcome-font;
    font-weight: 200;
    font-size: 1.5em;
  }

  &__benefits {
    @extend .hero__slogan;
    font-size: 2.5em;
    font-weight: 300;

    margin-bottom: 5rem;
  }

  &__overlay {
    text-align: center;
    display: flex;

    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.7);
    align-items: center;
    flex-direction: column;
    justify-content: center;
  }

  @include phone {
    &__logo {
      font-size: 3em;
      margin-bottom: -0.7rem;
    }

    &__slogan {
    }

    &__benefits {
      font-size: 1.8em;
      font-weight: 300;

      margin-bottom: 3rem;
    }

    &__overlay {
    }
  }

  @include tablet {
    &__logo {
      font-size: 3em;
      margin-bottom: -0.7rem;
    }

    &__slogan {
    }

    &__benefits {
      font-size: 2em;
      font-weight: 300;

      margin-bottom: 3rem;
    }

    &__overlay {
    }
  }
}

